--- a/sites/all/themes/gms_theme/sass/components/views/_views.scss
+++ b/sites/all/themes/gms_theme/sass/components/views/_views.scss
@@ -67,6 +67,14 @@
   }
 }
 
+#views-exposed-form-texts-table-page {
+  input#edit-reset {
+    margin-top: 1em;
+  }
+}
+
+
+
 
 //@include zen-respond-to(s) {
 //  $zen-columns: 2;
